# pam_mysql

./: .gitignore  .gitmodules  .travis.sh  .travis.yml  AUTHORS  CMakeLists.txt  Makefile.am  NEWS  README  README.md  config.h.in  configure  configure.ac  configure.in  pam_mysql.c  pam_mysql.spec.in
cmake/: FindMySQLClient.cmake
debian/: changelog  control  libpam-mysql.docs  rules
src/: pam_mysql.c  stdlib_wrapper.c  stdlib_wrapper.h
tests/: CMakeLists.txt  authenticate.c  authenticate_args.c  load_unload.c
